@@ -1,5 +1,16 @@
 2011-11-07  Anders Carlsson  <andersca@apple.com>
 
+        Remove unused DrawingArea::syncCompositingLayers
+        https://bugs.webkit.org/show_bug.cgi?id=71717
+
+        Reviewed by John Sullivan.
+
+        * WebProcess/WebPage/DrawingArea.h:
+        * WebProcess/WebPage/DrawingAreaImpl.cpp:
+        * WebProcess/WebPage/TiledDrawingArea.h:
+
+2011-11-07  Anders Carlsson  <andersca@apple.com>
+
         Rename NetscapePlugin::wantsWindowRelativeNPWindowCoordinates to NetscapePlugin::wantsPluginRelativeNPWindowCoordinates
         https://bugs.webkit.org/show_bug.cgi?id=71708
 
